# EffectiveAcademyBackendLabs

./: Procfile  README.md  mypy.ini  pyproject.toml  ruff.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_book_options_alter_bookinstance_options_and_more.py
catalog/templates/: base_generic.html  index.html
catalog/templates/catalog/: author_detail.html  author_list.html
catalog/tests/: test_views.py
locallibrary/: settings.py  urls.py
locallibrary/catalog/: admin.py  models.py
locallibrary/catalog/migrations/: 0001_initial.py  0002_alter_book_options_alter_bookinstance_options_and_more.py
locallibrary/locallibrary/: settings.py  urls.py
